Fixed problem where long messages were too wide for the container

--- a/css/zw-stego.css
+++ b/css/zw-stego.css
@@ -38,3 +38,8 @@ button {
     background: -moz-linear-gradient(right, red, orange, yellow, green, cyan, blue, violet); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to right, red, orange , yellow, green, cyan, blue, violet); /* Standard syntax (must be last) */
 }
+
+#revealed-secret-message {
+    width: 80%;
+    margin: auto;
+}
